--- a/tableEdit.html
+++ b/tableEdit.html
@@ -80,9 +80,12 @@
             if(thisValue){
                 thisValue = Array.isArray(thisValue) ? thisValue[0] : thisValue;
             }
-            if(field === 'danxuan'){
-                obj.update({danxuan:thisValue.value});
-            }
+            var update = {};
+            update[field] = thisValue && typeof thisValue === 'string' ? thisValue : thisValue.value;
+            //把value更新到行中
+            obj.update(update);
+            //把显示值更新到输入框中(input)
+            thisValue && typeof thisValue === 'string' ? null : $(this).find('input.layui-tableEdit-input').val(thisValue.value);
         });
 
 
@@ -99,16 +102,31 @@
             if(Array.isArray(cascadeSelectData)){
                 cascadeSelectData = cascadeSelectData[0];
             }
-            if(cascadeSelectData.name+'' === '1'){
-                aopTable.cascadeSelectConfig = {
-                    data:[{name:1,value:'贵州'},{name:2,value:'云南'}], //下拉数据 只可ajax同步请求后台
-                    enabled:false //单选
-                };
+            //下拉数据 只可ajax同步请求后台
+            if(cascadeSelectField === 'rqjl'){ //日期级联下拉框
+                if(cascadeSelectData === '2020-05-11'){
+                    aopTable.cascadeSelectConfig = {
+                        data:[{name:1,value:'语文'},{name:2,value:'数学'},{name:3,value:'英语'},{name:4,value:'物理'},{name:5,value:'化学'}],
+                        enabled:false //单选
+                    };
+                }else {
+                    aopTable.cascadeSelectConfig = {
+                        data:[{name:6,value:'政治'},{name:7,value:'地理'},{name:8,value:'历史'},{name:9,value:'生物'},{name:10,value:'音乐'}],
+                        enabled:true //多选
+                    };
+                }
             }else {
-                aopTable.cascadeSelectConfig = {
-                    data:[{name:1,value:'苏州'},{name:2,value:'杭州'}],//下拉数据 只可ajax同步请求后台
-                    enabled:true //多选
-                };
+                if(cascadeSelectData.name+'' === '1'){
+                    aopTable.cascadeSelectConfig = {
+                        data:[{name:11,value:'贵州'},{name:12,value:'云南'},{name:13,value:'四川'},{name:14,value:'湖南'}],
+                        enabled:false //单选
+                    };
+                }else {
+                    aopTable.cascadeSelectConfig = {
+                        data:[{name:15,value:'荆州'},{name:16,value:'扬州'},{name:17,value:'杭州'},{name:18,value:'苏州'}],
+                        enabled:true //多选
+                    };
+                }
             }
         });
         /**
