--- a/tableEdit.html
+++ b/tableEdit.html
@@ -14,8 +14,8 @@
     layui.config({
         base: 'module/'
     }).extend({
-        //tableEdit:'js/tableEdit'
-        tableEdit:'js/column-tableEdit/tableEdit'
+        tableEdit:'js/tableEdit'
+        //tableEdit:'js/column-tableEdit/tableEdit'
         /**
          * 第一个js的下拉框div在body中创建
          * 第二个js的下拉框div在单元格中创建
