--- a/tableEdit.html
+++ b/tableEdit.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>示例demo</title>
-    <link rel="stylesheet" href="../../layuiAdmin.pro-v1.4.0/start/layui/css/layui.css">
+    <link rel="stylesheet" href="layui/css/layui.css">
 </head>
 <body>
 <table class="layui-hide" id="tableId" lay-filter="tableEvent"></table>
 </body>
-<script src="../../layuiAdmin.pro-v1.4.0/start/layui/layui.js"></script>
+<script src="layui/layui.js"></script>
 <script>
     layui.config({
-        base: '../'
+        base: 'module/'
     }).extend({
         tableEdit:'js/tableEdit'
     }).use(['table','tableEdit','layer'], function () {
@@ -21,7 +21,7 @@
         var cols = table.render({
             elem: '#tableId'
             ,id:'id'
-            ,url:'../json/data.json'
+            ,url:'module/json/data.json'
             ,height: 'full-90'
             ,page: true
             ,cols: [[
