--- a/tableEdit.html
+++ b/tableEdit.html
@@ -74,6 +74,7 @@
             var field = obj.field; //单元格字段
             var value = obj.value; //修改后的值
             var data = obj.data; //当前行旧数据
+            var event = obj.event; //当前单元格事件属性值
             var update = {};
             update[field] = value;
             //把value更新到行中
