--- a/verifyTest.html
+++ b/verifyTest.html
@@ -35,14 +35,14 @@
                 ,{field:'productImage',title: '产品照片路径',width:180,config:{verify:{type:'required',msg:'产品照片路径不能为空'}}}
                 ,{field:'productCategoryName',title: '分类名称',width:180}
                 ,{field:'price',title: '单价',width:180}
-                ,{field:'stockCount',title: '库存量',width:180,event:'stockCount',totalRow: true,config:{type:'input',verify:{type:'date'}}}
+                ,{field:'stockCount',title: '库存量',width:180,event:'stockCount',totalRow: true,config:{type:'input',verify:{type:'number'}}}
                 ,{field:'cost',title: '金额',width:180,totalRow: true}
             ]]
         });
         var aopTable = tableEdit.aopObj(thisTable.config.cols);
 
         aopTable.on('tool(tableEvent)',function (obj) {
-
+            obj.update({stockCount:parseFloat(obj.value)})
         });
 
         table.on('toolbar(tableEvent)', function(obj){
